--- a/src/assets/scss/_responsive.scss
+++ b/src/assets/scss/_responsive.scss
@@ -2,8 +2,10 @@
 
 }
 
-@media only screen and (max-width : 700px) {
-
+@media only screen and (max-width : 768px) {
+  h1 {
+    font-size: 1.75rem;
+  }
 }
 
 @media only screen and (max-width : 450px) {
