--- a/react-ui/src/assets/scss/_utils.scss
+++ b/react-ui/src/assets/scss/_utils.scss
@@ -144,20 +144,20 @@
 
 
 .spinner {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  background-color: white;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255,255,255,0.75);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 .shadow-depth {
   box-shadow: 0 0px 4px rgba(0, 0, 0, 0.25);
-
 }
 
