use jss for stylig everything

--- a/react-ui/src/assets/scss/_dashboard.scss
+++ b/react-ui/src/assets/scss/_dashboard.scss
@@ -4,8 +4,13 @@ html, body, #root {
   height: 100%;
 }
 
+code {
+  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 .panel {
