fix loader on account page, fix logout redirect on account deletion, deactivate artist profile when account is deleted

--- a/react-ui/src/assets/scss/_dashboard.scss
+++ b/react-ui/src/assets/scss/_dashboard.scss
@@ -8,7 +8,7 @@ code {
   font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   font-weight: normal;
   margin-bottom: 0.5em;
 }
